# smart-file-wrangler

./: .gitignore  ARCHITECTURE.md  README.md  SmartFileWrangler.spec  build_log.txt  gui.spec  pyproject.toml  requirements.txt
assets/: smart-file-wrangler.icns
assets/sample_media/: folder_tree.txt  report.csv  report.json  report.xlsx  sample-epub.epub  sample-excel.xlsx  sample-text.txt
assets/sample_media/subfolder_1/: sample-markdown.md  sample-open-spreadsheet.ods  sample-openDoc.odt  sample-richText.rtf  sample-tabsep-spreadsheet.tsv
assets/sample_media/subfolder_2/: sample-word.docx
installer/: installer.iss
src/smart_file_wrangler/: cli.py  config.py  file_scanner.py  gui.py  logger.py  main.py  main_window.ui  media_item.py  metadata_reader.py  organiser.py  pipeline.py  report_writer.py  thumbnailer.py  utils.py
tests/: test_organiser.py
