[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-file-wrangler"
version = "0.1.0"
description = "Python automation tool to organize media files and generate reports"
authors = [
    { name="George", email="249350741+ggvfx@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["python", "automation", "media", "organizer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
